<resources>
    <string name="app_name">DentAPP</string>
    <string name="welcome">Witaj w aplikacji DentAPP!</string>
    <string name="welcomeregister">Wprowadź dane aby założyć konto w aplikacji</string>
    <string name="email">Email</string>
    <string name="hintemail">Wprowadź adres e-mail</string>
    <string name="hintpassword">Wprowadź hasło</string>
    <string name="hintname">Wprowadź imię</string>
    <string name="hintsurname">Wprowadź nazwisko</string>
    <string name="hintnumber">Podaj numer telefonu</string>
    <string name="login">Zaloguj się</string>
    <string name="account">Nie masz konta?</string>
    <string name="register">Zarejestruj się!</string>
    <string name="logout">Wyloguj się</string>
    <string name="chooseType">Wybierz jaką rolę chcesz pełnić w aplikacji :</string>
    <string name="patientType">Pacjent</string>
    <string name="doctorType">Stomatolog</string>
    <string name="calendar_p">Moje wizyty</string>
    <string name="calendar_d">Dyspozycyjność</string>
    <string name="profile">Twój profil</string>
    <string name="home_p">Lista lekarzy</string>
    <string name="home_d">Terminy wizyt</string>
    <string name="settings">Ustawienia</string>

    <string name="nav_header_title">imię i nazwisko</string>
    <string name="nav_header_subtitle">mail</string>

    <string name="action_settings">Ustawienia</string>

    <string name="descriptionHeader">Opis</string>
    <string name="addressHeader">Adres gabinetu</string>
    <string name="numberHeader">Numer telefonu</string>
    <string name="title_activity_p_home">pHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="home_second">Home Second</string>

    <string name="doctorName">Imie </string>
    <string name="doctorSurname">Nazwisko lekarza</string>
    <string name="address">Adres gabinetu</string>
    <string name="p_fragment_calendar">Podaj dyspozycyjność</string>
    <string name="choose_date">Wybierz dzień</string>
    <string name="choose_time">Wybierz godzinę</string>
    <string name="search">Wyszukuj</string>
    <string name="data_save">Zatwierdź</string>
    <string name="p_freetime_list">Lista terminów możliwych wizyt</string>
</resources>
