<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pHome.doctorProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorMainAccent">


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/ic_person"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/NameSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Imię i nazwisko"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Adres e-mail"
                        android:layout_marginLeft="8dp"
                        android:paddingTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="8dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="140dp"
                android:padding="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/descriptionHeader"
                    android:textStyle="bold|italic">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/descriptionContent"
                    android:textSize="15sp"
                    android:paddingLeft="30dp"
                    android:text="Ustaw opis"
                    android:paddingStart="30dp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/addressHeader"
                    android:textStyle="bold|italic">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addressContent"
                    android:textSize="15sp"
                    android:paddingLeft="30dp"
                    android:text="Ustaw adres"
                    android:paddingStart="30dp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="20sp"
                    android:text="@string/numberHeader"
                    android:textStyle="bold|italic">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/numberContent"
                    android:textSize="15sp"
                    android:paddingLeft="30dp"
                    android:text="Ustaw numer telefonu"
                    android:paddingStart="30dp"
                    android:layout_marginBottom="20dp">
                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:padding="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="Masz pytania?"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center">
                </TextView>

                <Button
                    android:id="@+id/callDoctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Zadzwoń  "
                    android:drawableRight="@drawable/ic_call"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp">
                </Button>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:padding="20dp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="20dp"
                    android:text="Zarezerwuj wizytę "
                    android:textStyle="bold|italic"
                    android:layout_marginLeft="20dp">
                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dates_RecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="30dp">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>